--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
-main {
-  background-color: aliceblue;
+@import url("https://fonts.googleapis.com/css2?family=Koh+Santepheap:wght@400;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,400;0,600;1,200&display=swap");
+
+:root {
+  --bg-color: #ffeedb;
+}
+
+html{
+  background-color: var(--bg-color)
 }
