--- a/style.css
+++ b/style.css
@@ -1,6 +1,45 @@
-main {
-  background-color: aliceblue;
+/* desktop view */
+header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 0rem;
 }
-footer {
-  background-color: black;
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 2rem;
+  padding: 1rem;
+}
+nav ul li {
+  display: inline;
+  padding: 10px;
+}
+nav ul {
+  padding-left: 0px;
+  text-align: right;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: 100;
+}
+
+/* mobile view */
+@media only screen and (max-width: 600px) {
+  main {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 10px;
+  }
+
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+  footer {
+    background-color: black;
+    color: white;
+    margin: 0px;
+  }
 }
