--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
 
 :root {
   --bg-color: #ffeedb;
-  --p-color:#707070;
+  --p-color: #707070;
   --button-color: black;
 }
 
-html{
-  background-color: var(--bg-color)
+html {
+  background-color: var(--bg-color);
 }
 
 /*Homepage*/
@@ -23,8 +23,8 @@ html{
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0, 0.9);
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
   overflow-x: hidden;
   transition: 0.5s;
 }
@@ -46,7 +46,8 @@ html{
   transition: 0.3s;
 }
 
-.overlay a:hover, .overlay a:focus {
+.overlay a:hover,
+.overlay a:focus {
   color: #f1f1f1;
 }
 
@@ -58,33 +59,33 @@ html{
 }
 
 /*main*/
-p{
+p {
   text-align: center;
   font-size: 2rem;
-font-family: 'Koh Santepheap', cursive;;
-  color:var(--p-color)
+  font-family: "Koh Santepheap", cursive;
+  color: var(--p-color);
 }
-.h1_landing_page{
+.h1_landing_page {
   font-family: "Monoton", cursive;
   letter-spacing: +2px;
   font-size: 4rem;
 }
-.container_landing{
+.container_landing {
   display: flex;
   align-items: center;
   flex-direction: column;
 }
-.couch_img{
+.couch_img {
   max-width: 45%;
   top: 10%;
   animation: couch 2s forwards;
   -webkit-animation: couch 2s forwards;
 }
-.potato_img{
+.potato_img {
   max-width: 12%;
   top: 20%;
   animation: potato 2.5s forwards;
-  -webkit-animation:potato 2.5s forwards;
+  -webkit-animation: potato 2.5s forwards;
 }
 
 @keyframes couch {
@@ -101,13 +102,13 @@ font-family: 'Koh Santepheap', cursive;;
     transform: translateY(55vw);
   }
   100% {
-      transform: translateY(0%);
+    transform: translateY(0%);
   }
 }
 
 button {
   width: 100%;
-  font-family: 'Koh Santepheap', cursive;
+  font-family: "Koh Santepheap", cursive;
   padding: 1rem;
   border-radius: 23px;
   background: var(--button-color);
@@ -121,3 +122,4 @@ button {
   margin: 0 1rem 0 0;
 }
 
+/* Styling for the list viewvs */
