--- a/style.css
+++ b/style.css
@@ -232,6 +232,7 @@ padding-left: 20px;
 .milgrid{
 display: grid;
 grid-template-columns: repeat (2,250px );
+grid-template-columns: repeat(auto-fill, minmax(150px, 300px));
 }
 
 .photo{
