--- a/style.css
+++ b/style.css
@@ -228,13 +228,7 @@ p {
 }
 /* listlayout
 */
-.listLayout {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 600px));
-  grid-template-rows: repeat(auto-fill, minmax(600px, 1000px));
-  gap: 2em;
-}
-article img {
+img {
   max-width: 100%;
   max-height: 100%;
 }
